# baboon-agmm

./: .gitignore  AGMM.cpp  AGMM.hpp  AGMM.py  BackgroundSubtraction.cpp  BackgroundSubtraction.cpp.old  CMakeLists.txt  README.md  background_maintenance.py  setup.py
include/: AGMM.h  Gaussian.h  Mixture.h
src/: AGMM.cpp  AGMM.hpp  BackgroundSubtraction.cpp  Gaussian.cpp  Mixture.cpp  main.cpp
